# ZipsPicoAccelerometer

./: .gitmodules  CMakeLists.txt  README.md
include/: SDCard.h  SDUtil.h  ZipsMPU6050.h
src/: main.cpp  sd_conf.cpp
